recipes, comment code

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,10 +6,14 @@
 
 			<h1>Liste des recipes</h1>
 
-            {% set total = recipes|length %}
+            <!-- On définit la longueur totale du tableau / le nombre total de recipes -->
+            {% set total = recipes|length %} 
+            <!-- On définit le point de départ : si le nombre total de recipes est > 2 alors, le point de départ "start" commence à total - 2, sinon il commence à 0 (évite erreur Twig) -->
             {% set start = total > 2 ? total - 2 : 0 %}
             
+            <!-- On créé une boucle en précisant une portée / range démarrant du point "start" et terminant au nombre "total" de recipes, soit la dernière recipe -->
             {% for i in range(start, total) %}
+            <!-- On incorpore l'index dans la définition de recipe pour pouvoir cibler avec la boucle les 3 dernières recettes -->
                 {% set recipe = recipes[i] %}
 
 					<article>
