--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,11 +1,24 @@
-<html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <!-- Permet de configurer le site en responsive -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <!-- Import du fichier style.css -->
+        <link rel="stylesheet" href="../public/css/style.css?v=<?= time(); ?>" />
+
+        <!-- Nomme l'onglet du navigateur -->
+        <title>Home</title>
+</head>
+    
 	<body>
 
 		<main>
 
 			<h1>Liste des recipes</h1>
-
+            <div id="article-order">
             <!-- On définit la longueur totale du tableau / le nombre total de recipes -->
             {% set total = recipes|length %} 
             <!-- On définit le point de départ : si le nombre total de recipes est > 2 alors, le point de départ "start" commence à total - 2, sinon il commence à 0 (évite erreur Twig) -->
@@ -16,19 +29,19 @@
             <!-- On incorpore l'index dans la définition de recipe pour pouvoir cibler avec la boucle les 3 dernières recettes -->
                 {% set recipe = recipes[i] %}
 
-					<article>
+					<article class="list-articles article">
 
 						<h2>{{ recipe.title }}</h2>
-                        <img src="{{ recipe.image }}" />
+                        <img class="article-image" src="{{ recipe.image }}" />
                         <ul>{% for ingredient in recipe.ingredients %} <li>{{ ingredient }}</li>{% endfor %}</ul>
-						<p>{{ recipe.description }}</p>
-						<p>{{ recipe.createdAt | date('d-m-Y')}}
+						<p class="article-content">{{ recipe.description }}</p>
+						<p class="article-date">{{ recipe.createdAt | date('d-m-Y')}}
                         <p>{{ recipe.category }}</p>		
 
 					</article>
 				
 			{% endfor %}
-
+            </div>
 		</main>
 
 	</body>
