ajout header/footer

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,33 +1,19 @@
+{% include 'partials/_header.html.twig' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <!-- Permet de configurer le site en responsive -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <!-- Import du fichier style.css -->
-        <link rel="stylesheet" href="../public/css/style.css?v=<?= time(); ?>" />
-
-        <!-- Nomme l'onglet du navigateur -->
-        <title>Home</title>
-</head>
-    
-	<body>
-
-		<main>
+    <main>
 
 			<h1>Liste des recipes</h1>
             <div id="article-order">
             <!-- On définit la longueur totale du tableau / le nombre total de recipes -->
-            {% set total = recipes|length %} 
-            <!-- On définit le point de départ : si le nombre total de recipes est > 2 alors, le point de départ "start" commence à total - 2, sinon il commence à 0 (évite erreur Twig) -->
-            {% set start = total > 2 ? total - 2 : 0 %}
-            
+            <!-- {# {% set total = recipes|length %} #}
+            On définit le point de départ : si le nombre total de recipes est > 2 alors, le point de départ "start" commence à total - 2, sinon il commence à 0 (évite erreur Twig) -->
+            <!-- {# {% set start = total > 2 ? total - 2 : 0 %} #}
+             -->
             <!-- On créé une boucle en précisant une portée / range démarrant du point "start" et terminant au nombre "total" de recipes, soit la dernière recipe -->
-            {% for i in range(start, total) %}
+            <!-- {# {% for i in range(start, total) %} #} -->
             <!-- On incorpore l'index dans la définition de recipe pour pouvoir cibler avec la boucle les 3 dernières recettes -->
-                {% set recipe = recipes[i] %}
+             <!-- {#   {% set recipe = recipes[i] %} #} -->
+                {% for recipe in recipes %}
 
 					<article class="list-articles article">
 
@@ -35,15 +21,13 @@
                         <img class="article-image" src="{{ recipe.image }}" />
                         <ul>{% for ingredient in recipe.ingredients %} <li>{{ ingredient }}</li>{% endfor %}</ul>
 						<p class="article-content">{{ recipe.description }}</p>
-						<p class="article-date">{{ recipe.createdAt | date('d-m-Y')}}
+						<p class="article-date">{{ recipe.createdAt | date('d-m-Y')}}</p>
                         <p>{{ recipe.category }}</p>		
 
 					</article>
 				
-			{% endfor %}
+			    {% endfor %}
+
             </div>
 		</main>
-
-	</body>
-
-</html>
+        {% include 'partials/_footer.html.twig' %}
