--- a/templates/listRecipes.html.twig
+++ b/templates/listRecipes.html.twig
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <!-- Permet de configurer le site en responsive -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <!-- Import du fichier style.css -->
-        <link rel="stylesheet" href="../public/css/style.css?v=<?= time(); ?>" />
-
-        <!-- Nomme l'onglet du navigateur -->
-        <title>Home</title>
-</head>
-    
-
-	<body>
-
+{% include 'partials/_header.html.twig' %}
 		<main>
 
 			<h1>Liste des recettes</h1>
@@ -37,6 +21,4 @@
             </div>
 		</main>
 
-	</body>
-
-</html>
+        {% include 'partials/_footer.html.twig' %}
